Made broken lines visible in Opera, and a couple of other cross-browser compatibility fixes.

--- a/app/assets/stylesheets/vote.css.scss
+++ b/app/assets/stylesheets/vote.css.scss
@@ -5,7 +5,10 @@
 #votepie {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
+  border-radius: 10px;
   -webkit-box-shadow: 0 1px 3px #eee;
+  -moz-box-shadow: 0 1px 3px #eee;
+  box-shadow: 0 1px 3px #eee;
   margin: 0 auto;
   width: 270px;
   height: 200px;
